# gib2

./: .gitignore  LICENSE  README.md  config.json  requirements.txt  setup.cfg  setup.sh
gib/: README  __init__.pyi  cfg.pyi  client.pyi  cmd.pyi  pyproject.toml  setup.cfg  sql.pyi
gib/gib/: __init__.py  cfg.py  client.py  cmd.py  sql.py  util.py
gib_bot/: README  __init__.pyi  cmd.pyi  setup.cfg
gib_bot/gib_bot/: __init__.py  cmd.py  models.py
scripts/: git.sh  stub.sh
src/: main.py
