[metadata]
name = gib2
version = 0.1.0
author =  ari arcer
author_email =  ari.web.xyz@gmail.com
description = gib2
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = file: requirements.txt

