[metadata]
name = gib_bot
version = 0.1.0
author =  ari archer
author_email =  ari.web.xyz@gmail.com
description = gib_bot
long_description = file: README
long_description_content_type = text/plain
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = file: requirements.txt

